# waybar-dbus-monitor

./: Cargo.toml  README.md  create-release.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: cli.rs  dbus_listener.rs  error.rs  main.rs  retry.rs
