[package]
name = "waybar-dbus-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = [
    "derive",
    "std",
], default-features = false }
tokio = { version = "1.45.1", features = [
    "rt",
    "macros",
], default-features = false }
zbus = { version = "5.7.1", features = ["tokio"], default-features = false }
futures-lite = { version = "2.6", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }

[profile.release]
lto = "fat"
opt-level = "z"
strip = true
codegen-units = 1
overflow-checks = false
